# modkit

./: BUILD_NOTES_candle.txt  BUILD_NOTES_tch.txt  CHANGELOG.md  generate_advanced_usage.sh
book/src/: advanced_usage.md  intro_dmr.md  quick_start.md
docs/: 404.html  advanced_usage.html  algo_details.html  collapse.html  dmr_scoring_details.html  evaluate_motif.html  faq.html  filtering.html  filtering_details.html  filtering_numeric_details.html  index.html  intro_adjust.html  intro_bedmethyl_merge.html  intro_call_mods.html  intro_dmr.html  intro_edge_filter.html  intro_entropy.html  intro_extract.html  intro_find_motifs.html  intro_include_bed.html  intro_localize.html  intro_modbam_check_tags.html  intro_motif.html  intro_motif_bed.html  intro_open_chromatin.html  intro_pileup.html  intro_pileup_hemi.html  intro_repair.html  intro_sample_probs.html  intro_stats.html  intro_summary.html  intro_validate.html  limitations.html  motif_search_structured_logging.html  perf_considerations.html  print.html  quick_start.html  searchindex.js  searchindex.json  troubleshooting.html
modkit/: Cargo.toml
modkit-core/: Cargo.toml
modkit-core/src/: read_ids_to_base_mod_probs.rs  thresholds.rs  util.rs
modkit/src/: commands.rs
modkit/tests/: test_shell_completions.rs
src/: commands.rs  read_ids_to_base_mod_probs.rs  thresholds.rs  util.rs
src/entropy/: subcommand.rs
src/modbam_util/: subcommands.rs
src/stats/: subcommand.rs
tests/resources/: cgcg2_cg0_test1_combine_strands.bed  cgcg2_cg0_test2_combine_strands.bed  test_output_chr20-2.bed  (+1 more)
(+5 files in other folders)
