[package]
name = "modkit"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
clap_complete_command = "0.6.1"
indicatif = { version = "0.17.1", features = ["rayon"] }
itertools = "0.12.1"
log = "0.4.0"
mod_kit = { path = "../modkit-core" }
modkit-logging = { path = "../modkit-logging" }
ochm = { path = "../ochm" }
rayon = "1.8.0"
rust-htslib = "0.46.0"
rustc-hash = "1.1.0"

[dev-dependencies]
csv = "1.3.0"
derive-new = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
similar-asserts = "1.4.2"
tempfile = "3.2"
